Memperbaiki tampilan halaman beranda

--- a/index.html
+++ b/index.html
@@ -127,21 +127,24 @@
 
 <body class="bg-gray-200">
     <div class="relative">
-        <img alt="Background image of a park with a clock tower and trees" class="w-full h-[550px] object-cover" height="550" src="images/potensi.jpg" width="1920"/>
-        <div class="absolute inset-0 bg-gradient-to-r from-[#34699A] to-transparent"></div>
-        <div class="absolute inset-0 flex items-center justify-start p-20">
-            <div class="text-white my-8">
-                <div class="border-l-4 border-[#4F959D] pl-4 leading-loose">
-                    <h1 class="text-4xl text-[#FDF5AA] font-bold mb-4" style="font-family: 'Poppins', sans-serif;">Selamat Datang,</h1>
-                    <h2 class="text-5xl font-bold" style="font-family: 'Poppins', sans-serif;">
-                        Di Website Profil
-                        <br/>
-                        Kelurahan Matekko
-                    </h2>
-                </div>
+    <img alt="Background image of a park with a clock tower and trees" class="w-full h-[550px] object-cover" height="550" src="images/potensi.jpg" width="1920" />
+    
+    <div class="absolute inset-0 bg-gradient-to-r from-[#34699A] to-transparent"></div>
+
+    <div class="absolute inset-0 flex items-center justify-start px-4 py-10 sm:px-8 md:p-20">
+        <div class="text-white my-8">
+            <div class="border-l-4 border-[#4F959D] pl-4 leading-loose">
+                <h1 class="text-3xl sm:text-4xl text-[#FDF5AA] font-bold mb-4" style="font-family: 'Poppins', sans-serif;">Selamat Datang,</h1>
+                <h2 class="text-4xl sm:text-5xl font-bold" style="font-family: 'Poppins', sans-serif;">
+                    Di Website Profil
+                    <br />
+                    Kelurahan Matekko
+                </h2>
             </div>
         </div>
     </div>
+</div>
+
 
     <div class="container mx-auto px-8 p-4 text-gray-800">
         <div class="flex flex-col md:flex-row">
@@ -174,121 +177,142 @@
     </div>
 
     <div class="container mx-auto px-8 p-5 bg-[#4981AB] text-white rounded-2xl">
-    <div class="flex flex-col md:flex-row">
-        <div class="md:w-1/4 flex items-center justify-center md:justify-end">
-            <div class="flex flex-col space-y-4 items-center md:items-end">
 
-                <div class="text-center">
-                    <img src="images/masjid.jpg" alt="Sejarah Kelurahan 1" class="w-full h-[400px] object-cover rounded-lg shadow-lg transition-transform duration-300 hover:scale-105" />
-                    <p class="text-sm text-gray-100 mt-2 font-semibold tracking-wide">
-                    Masjid Taqwa Ponre Kelurahan Matekko Bulukumba
-                    </p>
-                </div>
-
-                <div class="text-center">
-                    <img src="images/makam.jpg" alt="Sejarah Kelurahan 2" class="w-full h-[400px] object-cover rounded-lg shadow-lg transition-transform duration-300 hover:scale-105" />
-                    <p class="text-sm text-gray-100 mt-2 font-semibold tracking-wide">
-                    Makam Pahlawan Nasional H.A. Sultan Dg. Radja
-                    </p>
-                </div>
-
-            </div>
-
-        </div>
-
-        <div class="md:w-5/6 ml-4 pl-8">
-            <div class="flex items-center mb-1">
-                <div class="w-1 bg-[#4F959D] h-12 mr-4"></div>
-                <h1 class="text-4xl font-bold text-[#F6F8D5]" style="font-family: 'Poppins', sans-serif;">Sejarah Singkat</h1>
-            </div>
-            <h2 class="text-3xl text-gray-200 mb-4" style="font-family: 'Poppins', sans-serif;">Kelurahan Matekko</h2>
-
-            <p class="mb-4 text-justify text-white" style="font-family: 'Poppins', sans-serif;">
-                Matekko berasal dari kata yang berarti terampil. Nama ini mencerminkan karakter masyarakatnya, yang dikenal sebagai orang-orang dengan berbagai keterampilan, seperti tukang tenun, tukang kayu, pandai besi, dan sebagainya.
-            </p>
-
-            <p class="text-justify text-yellow-300 font-semibold text-xl" style="font-family: 'Poppins', sans-serif;">
-                Asal Usul Lingkungan Ponre
-            </p>
-            <p class="mb-4 text-justify text-white" style="font-family: 'Poppins', sans-serif;">
-                Lingkungan Ponre awalnya dihuni oleh sekelompok masyarakat dari Polewali. Wilayah ini belum memiliki nama hingga dibangunnya Masjid Taqwa oleh pendatang dari daerah Ponre di Kabupaten Bone — sebuah kecamatan di Bone juga bernama Ponre. Sejak saat itu, masyarakat mulai menyebut masjid tersebut sebagai Masjid Ponre, dan akhirnya wilayah di sekitarnya dikenal sebagai Lingkungan Ponre.
-            </p>
-            <p class="text-justify text-yellow-300 font-semibold text-xl" style="font-family: 'Poppins', sans-serif;">
-                Pembentukan Kelurahan Matekko
-            </p>
-            <p class="mb-2 text-justify text-white" style="font-family: 'Poppins', sans-serif;">
-                Dulunya, wilayah Matekko merupakan satu kesatuan dengan Jalanjang dan Mariorennu, yang tergabung dalam satu kelurahan bernama Kelurahan Matekko. Nama Matekko disepakati sebagai nama kelurahan karena menggambarkan identitas masyarakatnya yang terampil.
-            </p>
-            <p class="mb-1 text-justify text-white" style="font-family: 'Poppins', sans-serif;">
-                Seiring berjalannya waktu dan perkembangan wilayah, Kelurahan Matekko kemudian dimekarkan menjadi tiga kelurahan, yaitu:
-            </p>
-            <ul class="list-disc list-inside text-white mb-4" style="font-family: 'Poppins', sans-serif;">
-                <li>Kelurahan Matekko</li>
-                <li>Kelurahan Jalanjang</li>
-                <li>Kelurahan Mariorennu</li>
-            </ul>
-            <p class="text-justify text-yellow-300 font-semibold text-xl" style="font-family: 'Poppins', sans-serif;">
-                Sejarah Pemerintahan dan Pembagian Wilayah
-            </p>
-            <p class="mb-1 text-justify text-white" style="font-family: 'Poppins', sans-serif;">
-                Pada masa lalu, wilayah Kecamatan Gantarang merupakan bagian dari dua distrik, yaitu:
-            </p>
-            <ul class="list-disc list-inside text-white mb-2" style="font-family: 'Poppins', sans-serif;">
-                <li>Distrik Gantarang</li>
-                <li>Distrik Kindang</li>
-            </ul>
-            <p class="mb-1 text-justify text-white" style="font-family: 'Poppins', sans-serif;">
-                Ketika terjadi pemekaran wilayah, kedua distrik ini kemudian ditetapkan menjadi dua kecamatan, yaitu:
-            </p>
-            <ul class="list-disc list-inside text-white mb-2" style="font-family: 'Poppins', sans-serif;">
-                <li>Kecamatan Gantarang</li>
-                <li>Kecamatan Kindang</li>
-            </ul>
-            <p class="mb-4 text-justify text-white" style="font-family: 'Poppins', sans-serif;">
-                Awalnya, Kecamatan Gantarang memiliki 10 desa. Setelah terbentuknya Kecamatan Kindang, beberapa desa dipisahkan dari Gantarang dan masuk ke wilayah Kindang.
-            </p>
-            <p class="text-justify text-yellow-300 font-semibold text-xl" style="font-family: 'Poppins', sans-serif;">
-                Sistem Pemerintahan Tradisional
-            </p>
-
-            <p class="mb-1 text-justify text-white" style="font-family: 'Poppins', sans-serif;">
-                Sebelum terbentuknya sistem pemerintahan desa secara resmi, wilayah-wilayah ini dipimpin oleh tokoh masyarakat yang disebut dengan berbagai gelar adat, seperti:
-            </p>
-            <ol class="list-decimal list-inside text-white mb-4 space-y-2" style="font-family: 'Poppins', sans-serif;">
-                <li>
-                    <strong class="text-[#F6F8D5]">Jennang</strong>: Pemimpin masyarakat yang dituakan. Istilah ini berasal dari "Jannang Romang", yang berarti penguasa atau penjaga hutan.
-                </li>
-                <li>
-                    <strong class="text-[#F6F8D5]">Lompo</strong>: Pemimpin wilayah yang memiliki pengaruh besar.
-                </li>
-                <li>
-                    <strong class="text-[#F6F8D5]">Macoa</strong>: Tokoh masyarakat dengan peran kepemimpinan.
-                </li>
-                <li>
-                    <strong class="text-[#F6F8D5]">Gallarang</strong>: Pemimpin adat di suatu wilayah.
-                </li>
-                <li>
-                    <strong class="text-[#F6F8D5]">Bangkeng Bate</strong>: Secara harfiah berarti "pemegang bendera", biasanya saat perang.
-                </li>
-            </ol>
-            <p class="mb-1 text-justify text-white" style="font-family: 'Poppins', sans-serif;">
-                Berikut adalah pembagian wilayah dan pemimpinnya pada masa lalu:
-            </p>
-            <ul class="list-decimal list-inside text-white mb-4 space-y-2" style="font-family: 'Poppins', sans-serif;">
-                <li><strong class="text-[#F6F8D5]">Palambarae, Polewali, dan Taccorong</strong>: dipimpin oleh <strong class="text-[#F6F8D5]">Panreguru</strong></li>
-                <li><strong class="text-[#F6F8D5]">Paenre Lompoe, Bontosunggu, dan Bukit Tinggi</strong>: dipimpin oleh <strong class="text-[#F6F8D5]">Lompo</strong></li>
-                <li><strong class="text-[#F6F8D5]">Bialo, Barombong, dan Dampang</strong>: dipimpin oleh <strong class="text-[#F6F8D5]">Jennang</strong></li>
-                <li><strong class="text-[#F6F8D5]">Matekko</strong>: dipimpin oleh <strong class="text-[#F6F8D5]">Lompo</strong></li>
-                <li><strong class="text-[#F6F8D5]">Jalanjang</strong>: dipimpin oleh <strong class="text-[#F6F8D5]">Jennang</strong></li>
-                <li><strong class="text-[#F6F8D5]">Mariorennu</strong>: dipimpin oleh <strong class="text-[#F6F8D5]">Macoa</strong></li>
-                <li><strong class="text-[#F6F8D5]">Bontomacinna</strong>: dipimpin oleh <strong class="text-[#F6F8D5]">Lompo</strong></li>
-                <li><strong class="text-[#F6F8D5]">Gattareng</strong>: dipimpin oleh <strong class="text-[#F6F8D5]">Gallarang</strong></li>
-                <li><strong class="text-[#F6F8D5]">Malewang</strong>: dipimpin oleh <strong class="text-[#F6F8D5]">Bangkeng Bate</strong></li>
-            </ul>
-
-        </div>
+  <!-- Judul (muncul di semua perangkat) -->
+  <div class="mb-4">
+    <div class="flex items-center mb-1">
+      <div class="w-1 bg-[#4F959D] h-12 mr-4"></div>
+      <h1 class="text-4xl font-bold text-[#F6F8D5]" style="font-family: 'Poppins', sans-serif;">
+        Sejarah Singkat
+      </h1>
     </div>
+    <h2 class="text-3xl text-gray-200" style="font-family: 'Poppins', sans-serif;">Kelurahan Matekko</h2>
+  </div>
+
+  <!-- Gambar versi MOBILE -->
+  <div class="flex flex-col space-y-4 items-center mb-6 md:hidden">
+    <div class="text-center">
+      <img src="images/masjid.jpg" alt="Sejarah Kelurahan 1"
+        class="w-full h-[400px] object-cover rounded-lg shadow-lg transition-transform duration-300 hover:scale-105" />
+      <p class="text-sm text-gray-100 mt-2 font-semibold tracking-wide">
+        Masjid Taqwa Ponre Kelurahan Matekko Bulukumba
+      </p>
+    </div>
+
+    <div class="text-center">
+      <img src="images/makam.jpg" alt="Sejarah Kelurahan 2"
+        class="w-full h-[400px] object-cover rounded-lg shadow-lg transition-transform duration-300 hover:scale-105" />
+      <p class="text-sm text-gray-100 mt-2 font-semibold tracking-wide">
+        Makam Pahlawan Nasional H.A. Sultan Dg. Radja
+      </p>
+    </div>
+  </div>
+
+  <!-- Konten utama: gambar kiri (desktop), teks kanan -->
+  <div class="flex flex-col md:flex-row">
+
+    <!-- Gambar versi DESKTOP -->
+    <div class="hidden md:flex md:w-1/4 items-center justify-end">
+      <div class="flex flex-col space-y-4 items-center md:items-end">
+        <div class="text-center">
+          <img src="images/masjid.jpg" alt="Sejarah Kelurahan 1"
+            class="w-full h-[400px] object-cover rounded-lg shadow-lg transition-transform duration-300 hover:scale-105" />
+          <p class="text-sm text-gray-100 mt-2 font-semibold tracking-wide">
+            Masjid Taqwa Ponre Kelurahan Matekko Bulukumba
+          </p>
+        </div>
+
+        <div class="text-center">
+          <img src="images/makam.jpg" alt="Sejarah Kelurahan 2"
+            class="w-full h-[400px] object-cover rounded-lg shadow-lg transition-transform duration-300 hover:scale-105" />
+          <p class="text-sm text-gray-100 mt-2 font-semibold tracking-wide">
+            Makam Pahlawan Nasional H.A. Sultan Dg. Radja
+          </p>
+        </div>
+      </div>
+    </div>
+
+    <!-- Teks sejarah -->
+    <div class="md:w-3/4 md:pl-8">
+      <p class="mb-4 text-justify text-white" style="font-family: 'Poppins', sans-serif;">
+        Matekko berasal dari kata yang berarti terampil. Nama ini mencerminkan karakter masyarakatnya, yang dikenal sebagai orang-orang dengan berbagai keterampilan, seperti tukang tenun, tukang kayu, pandai besi, dan sebagainya.
+      </p>
+
+      <p class="text-justify text-yellow-300 font-semibold text-xl" style="font-family: 'Poppins', sans-serif;">
+        Asal Usul Lingkungan Ponre
+      </p>
+      <p class="mb-4 text-justify text-white" style="font-family: 'Poppins', sans-serif;">
+        Lingkungan Ponre awalnya dihuni oleh sekelompok masyarakat dari Polewali. Wilayah ini belum memiliki nama hingga dibangunnya Masjid Taqwa oleh pendatang dari daerah Ponre di Kabupaten Bone — sebuah kecamatan di Bone juga bernama Ponre. Sejak saat itu, masyarakat mulai menyebut masjid tersebut sebagai Masjid Ponre, dan akhirnya wilayah di sekitarnya dikenal sebagai Lingkungan Ponre.
+      </p>
+
+      <p class="text-justify text-yellow-300 font-semibold text-xl" style="font-family: 'Poppins', sans-serif;">
+        Pembentukan Kelurahan Matekko
+      </p>
+      <p class="mb-2 text-justify text-white" style="font-family: 'Poppins', sans-serif;">
+        Dulunya, wilayah Matekko merupakan satu kesatuan dengan Jalanjang dan Mariorennu, yang tergabung dalam satu kelurahan bernama Kelurahan Matekko. Nama Matekko disepakati sebagai nama kelurahan karena menggambarkan identitas masyarakatnya yang terampil.
+      </p>
+      <p class="mb-1 text-justify text-white" style="font-family: 'Poppins', sans-serif;">
+        Seiring berjalannya waktu dan perkembangan wilayah, Kelurahan Matekko kemudian dimekarkan menjadi tiga kelurahan, yaitu:
+      </p>
+      <ul class="list-disc list-inside text-white mb-4" style="font-family: 'Poppins', sans-serif;">
+        <li>Kelurahan Matekko</li>
+        <li>Kelurahan Jalanjang</li>
+        <li>Kelurahan Mariorennu</li>
+      </ul>
+
+      <p class="text-justify text-yellow-300 font-semibold text-xl" style="font-family: 'Poppins', sans-serif;">
+        Sejarah Pemerintahan dan Pembagian Wilayah
+      </p>
+      <p class="mb-1 text-justify text-white" style="font-family: 'Poppins', sans-serif;">
+        Pada masa lalu, wilayah Kecamatan Gantarang merupakan bagian dari dua distrik, yaitu:
+      </p>
+      <ul class="list-disc list-inside text-white mb-2" style="font-family: 'Poppins', sans-serif;">
+        <li>Distrik Gantarang</li>
+        <li>Distrik Kindang</li>
+      </ul>
+      <p class="mb-1 text-justify text-white" style="font-family: 'Poppins', sans-serif;">
+        Ketika terjadi pemekaran wilayah, kedua distrik ini kemudian ditetapkan menjadi dua kecamatan, yaitu:
+      </p>
+      <ul class="list-disc list-inside text-white mb-2" style="font-family: 'Poppins', sans-serif;">
+        <li>Kecamatan Gantarang</li>
+        <li>Kecamatan Kindang</li>
+      </ul>
+      <p class="mb-4 text-justify text-white" style="font-family: 'Poppins', sans-serif;">
+        Awalnya, Kecamatan Gantarang memiliki 10 desa. Setelah terbentuknya Kecamatan Kindang, beberapa desa dipisahkan dari Gantarang dan masuk ke wilayah Kindang.
+      </p>
+
+      <p class="text-justify text-yellow-300 font-semibold text-xl" style="font-family: 'Poppins', sans-serif;">
+        Sistem Pemerintahan Tradisional
+      </p>
+      <p class="mb-1 text-justify text-white" style="font-family: 'Poppins', sans-serif;">
+        Sebelum terbentuknya sistem pemerintahan desa secara resmi, wilayah-wilayah ini dipimpin oleh tokoh masyarakat yang disebut dengan berbagai gelar adat, seperti:
+      </p>
+      <ol class="list-decimal list-inside text-white mb-4 space-y-2" style="font-family: 'Poppins', sans-serif;">
+        <li><strong class="text-[#F6F8D5]">Jennang</strong>: Pemimpin masyarakat yang dituakan.</li>
+        <li><strong class="text-[#F6F8D5]">Lompo</strong>: Pemimpin wilayah yang memiliki pengaruh besar.</li>
+        <li><strong class="text-[#F6F8D5]">Macoa</strong>: Tokoh masyarakat dengan peran kepemimpinan.</li>
+        <li><strong class="text-[#F6F8D5]">Gallarang</strong>: Pemimpin adat di suatu wilayah.</li>
+        <li><strong class="text-[#F6F8D5]">Bangkeng Bate</strong>: "Pemegang bendera", biasanya saat perang.</li>
+      </ol>
+
+      <p class="mb-1 text-justify text-white" style="font-family: 'Poppins', sans-serif;">
+        Berikut adalah pembagian wilayah dan pemimpinnya pada masa lalu:
+      </p>
+      <ul class="list-decimal list-inside text-white mb-4 space-y-2" style="font-family: 'Poppins', sans-serif;">
+        <li><strong class="text-[#F6F8D5]">Palambarae, Polewali, dan Taccorong</strong>: Panreguru</li>
+        <li><strong class="text-[#F6F8D5]">Paenre Lompoe, Bontosunggu, dan Bukit Tinggi</strong>: Lompo</li>
+        <li><strong class="text-[#F6F8D5]">Bialo, Barombong, dan Dampang</strong>: Jennang</li>
+        <li><strong class="text-[#F6F8D5]">Matekko</strong>: Lompo</li>
+        <li><strong class="text-[#F6F8D5]">Jalanjang</strong>: Jennang</li>
+        <li><strong class="text-[#F6F8D5]">Mariorennu</strong>: Macoa</li>
+        <li><strong class="text-[#F6F8D5]">Bontomacinna</strong>: Lompo</li>
+        <li><strong class="text-[#F6F8D5]">Gattareng</strong>: Gallarang</li>
+        <li><strong class="text-[#F6F8D5]">Malewang</strong>: Bangkeng Bate</li>
+      </ul>
+    </div>
+  </div>
 </div>
+
 
 
     <div class="max-w-6xl mx-auto p-4">
