Memperbaiki tampilan header

--- a/infografis.html
+++ b/infografis.html
@@ -71,7 +71,7 @@
   </head>
   
   <body class="bg-gray-200 pt-14">
-    <header class="fixed top-0 left-0 right-0 bg-[#205781] p-2 flex items-center z-50 shadow-lg rounded-b-xl transition-all duration-300">
+    <header class="fixed top-0 left-0 right-0 bg-[#205781] p-2 flex items-center z-50 shadow-lg transition-all duration-300">
         <div class="container mx-auto flex items-center">
             <div class="flex items-center">
                 <img 
