--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 </head>
 <body class="bg-gray-100">
     <!-- Navbar -->
-    <header class="fixed top-0 left-0 right-0 bg-[#205781] p-2 flex items-center z-50 shadow-lg rounded-b-xl transition-all duration-300">
+    <header class="fixed top-0 left-0 right-0 bg-[#205781] p-2 flex items-center z-50 shadow-lg transition-all duration-300">
         <div class="container mx-auto flex items-center justify-between">
             <div class="flex items-center">
                 <img alt="Logo of Bulukumba" class="h-15 w-12 mr-4 rounded-full shadow-md hover:rotate-12 transition-transform duration-300" height="70" src="images/logo_bulukumba.png" width="70" />
