--- a/profildesa.html
+++ b/profildesa.html
@@ -72,7 +72,7 @@
               <i class="fas fa-bars"></i>
           </button>
           <nav id="nav-menu" class="ml-auto hidden md:block">
-              <ul class="flex space-x-4 text-white">
+              <ul class="flex flex-col md:flex-row md:space-x-4 text-white">
                   <li class="group relative">
                       <a 
                           class="relative z-10 font-bold nav-link px-3 py-2 
