Memperbaiki tampilan footer

--- a/profildesa.html
+++ b/profildesa.html
@@ -209,20 +209,17 @@
   </div>
 </div>
 
-    <!-- Footer -->
+<!-- footer -->
 <div class="bg-[#205781] text-white pb-4">
   <div class="container mx-auto px-6 py-8">
 
-    <!-- Area atas: teks di atas logo di mobile, logo kiri teks tengah di desktop -->
     <div class="flex flex-col md:flex-row md:items-center md:justify-between mb-6">
 
-      <!-- Teks: muncul dulu di mobile, di tengah pada desktop -->
       <div class="w-full text-center md:text-center md:w-full mb-4 md:mb-0">
         <h1 class="text-xl text-[#F6F8D5] font-bold">Kelurahan Matekko</h1>
         <p class="text-sm text-gray-300">Kec. Gantarang, Kab. Bulukumba, Sulawesi Selatan</p>
       </div>
 
-      <!-- Logo: muncul di bawah teks pada mobile, di kiri saat desktop -->
       <div class="flex justify-center md:justify-start space-x-4 w-full md:w-auto">
         <img alt="Logo 1" src="images/logo_bulukumba.png" class="w-14 h-14 object-contain opacity-80 hover:opacity-100 transition-opacity" />
         <img alt="Logo 2" src="images/logoposko.png" class="w-14 h-14 object-contain opacity-80 hover:opacity-100 transition-opacity" />
@@ -230,10 +227,8 @@
       </div>
     </div>
 
-    <!-- Garis -->
     <div class="border-t border-gray-500 mb-6"></div>
 
-    <!-- Konten bawah -->
     <div class="grid grid-cols-1 md:grid-cols-3 gap-6 text-justify">
       <div>
         <h2 class="text-base text-[#F6F8D5] font-bold">Website Profil Kelurahan</h2>
@@ -255,7 +250,6 @@
       </div>
     </div>
 
-    <!-- Copyright -->
     <div class="text-center mt-6 border-t border-gray-500 pt-4">
       <p class="text-xs text-gray-300">© 2025 Kelurahan Matekko - All rights reserved</p>
     </div>
