--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     </style>
 </head>
 <body class="bg-gray-100">
-    <!-- Navbar -->
+
     <header class="fixed top-0 left-0 right-0 bg-[#205781] p-2 flex items-center z-50 shadow-lg transition-all duration-300">
         <div class="container mx-auto flex items-center justify-between">
             <div class="flex items-center">
@@ -178,7 +178,6 @@
 
     <div class="container mx-auto px-8 p-5 bg-[#4981AB] text-white rounded-2xl">
 
-  <!-- Judul (muncul di semua perangkat) -->
   <div class="mb-4">
     <div class="flex items-center mb-1">
       <div class="w-1 bg-[#4F959D] h-12 mr-4"></div>
@@ -189,7 +188,6 @@
     <h2 class="text-3xl text-gray-200" style="font-family: 'Poppins', sans-serif;">Kelurahan Matekko</h2>
   </div>
 
-  <!-- Gambar versi MOBILE -->
   <div class="flex flex-col space-y-4 items-center mb-6 md:hidden">
     <div class="text-center">
       <img src="images/masjid.jpg" alt="Sejarah Kelurahan 1"
@@ -208,10 +206,8 @@
     </div>
   </div>
 
-  <!-- Konten utama: gambar kiri (desktop), teks kanan -->
   <div class="flex flex-col md:flex-row">
 
-    <!-- Gambar versi DESKTOP -->
     <div class="hidden md:flex md:w-1/4 items-center justify-end">
       <div class="flex flex-col space-y-4 items-center md:items-end">
         <div class="text-center">
@@ -232,7 +228,6 @@
       </div>
     </div>
 
-    <!-- Teks sejarah -->
     <div class="md:w-3/4 md:pl-8">
       <p class="mb-4 text-justify text-white" style="font-family: 'Poppins', sans-serif;">
         Matekko berasal dari kata yang berarti terampil. Nama ini mencerminkan karakter masyarakatnya, yang dikenal sebagai orang-orang dengan berbagai keterampilan, seperti tukang tenun, tukang kayu, pandai besi, dan sebagainya.
@@ -312,8 +307,6 @@
     </div>
   </div>
 </div>
-
-
 
     <div class="max-w-6xl mx-auto p-4">
         <div class="flex items-center mb-1">
@@ -533,20 +526,17 @@
         </div>
     </div>
 
-    <!-- Footer -->
+    <!-- footer -->
 <div class="bg-[#205781] text-white pb-4">
   <div class="container mx-auto px-6 py-8">
 
-    <!-- Area atas: teks di atas logo di mobile, logo kiri teks tengah di desktop -->
     <div class="flex flex-col md:flex-row md:items-center md:justify-between mb-6">
 
-      <!-- Teks: muncul dulu di mobile, di tengah pada desktop -->
       <div class="w-full text-center md:text-center md:w-full mb-4 md:mb-0">
         <h1 class="text-xl text-[#F6F8D5] font-bold">Kelurahan Matekko</h1>
         <p class="text-sm text-gray-300">Kec. Gantarang, Kab. Bulukumba, Sulawesi Selatan</p>
       </div>
 
-      <!-- Logo: muncul di bawah teks pada mobile, di kiri saat desktop -->
       <div class="flex justify-center md:justify-start space-x-4 w-full md:w-auto">
         <img alt="Logo 1" src="images/logo_bulukumba.png" class="w-14 h-14 object-contain opacity-80 hover:opacity-100 transition-opacity" />
         <img alt="Logo 2" src="images/logoposko.png" class="w-14 h-14 object-contain opacity-80 hover:opacity-100 transition-opacity" />
@@ -554,10 +544,8 @@
       </div>
     </div>
 
-    <!-- Garis -->
     <div class="border-t border-gray-500 mb-6"></div>
 
-    <!-- Konten bawah -->
     <div class="grid grid-cols-1 md:grid-cols-3 gap-6 text-justify">
       <div>
         <h2 class="text-base text-[#F6F8D5] font-bold">Website Profil Kelurahan</h2>
@@ -579,7 +567,6 @@
       </div>
     </div>
 
-    <!-- Copyright -->
     <div class="text-center mt-6 border-t border-gray-500 pt-4">
       <p class="text-xs text-gray-300">© 2025 Kelurahan Matekko - All rights reserved</p>
     </div>
