--- a/infografis.html
+++ b/infografis.html
@@ -287,7 +287,7 @@
          POSYANDU
         </p>
         <p class="text-2xl font-bold text-gray-800">
-         1 UNIT
+         4 UNIT
         </p>
        </div>
       </div>
@@ -345,7 +345,7 @@
          MASJID
         </p>
         <p class="text-2xl font-bold text-gray-800">
-         3 UNIT
+         5 UNIT
         </p>
        </div>
       </div>
@@ -356,7 +356,7 @@
          MUSHOLLAH
         </p>
         <p class="text-2xl font-bold text-gray-800">
-          3 UNIT
+          2 UNIT
         </p>
        </div>
       </div>
@@ -414,20 +414,17 @@
    
   </div>
 
-<!-- Footer -->
+<!-- footer -->
 <div class="bg-[#205781] text-white pb-4">
   <div class="container mx-auto px-6 py-8">
 
-    <!-- Area atas: teks di atas logo di mobile, logo kiri teks tengah di desktop -->
     <div class="flex flex-col md:flex-row md:items-center md:justify-between mb-6">
 
-      <!-- Teks: muncul dulu di mobile, di tengah pada desktop -->
       <div class="w-full text-center md:text-center md:w-full mb-4 md:mb-0">
         <h1 class="text-xl text-[#F6F8D5] font-bold">Kelurahan Matekko</h1>
         <p class="text-sm text-gray-300">Kec. Gantarang, Kab. Bulukumba, Sulawesi Selatan</p>
       </div>
 
-      <!-- Logo: muncul di bawah teks pada mobile, di kiri saat desktop -->
       <div class="flex justify-center md:justify-start space-x-4 w-full md:w-auto">
         <img alt="Logo 1" src="images/logo_bulukumba.png" class="w-14 h-14 object-contain opacity-80 hover:opacity-100 transition-opacity" />
         <img alt="Logo 2" src="images/logoposko.png" class="w-14 h-14 object-contain opacity-80 hover:opacity-100 transition-opacity" />
@@ -435,10 +432,8 @@
       </div>
     </div>
 
-    <!-- Garis -->
     <div class="border-t border-gray-500 mb-6"></div>
 
-    <!-- Konten bawah -->
     <div class="grid grid-cols-1 md:grid-cols-3 gap-6 text-justify">
       <div>
         <h2 class="text-base text-[#F6F8D5] font-bold">Website Profil Kelurahan</h2>
@@ -460,7 +455,6 @@
       </div>
     </div>
 
-    <!-- Copyright -->
     <div class="text-center mt-6 border-t border-gray-500 pt-4">
       <p class="text-xs text-gray-300">© 2025 Kelurahan Matekko - All rights reserved</p>
     </div>
@@ -524,10 +518,6 @@ const qrCodeImage = document.querySelector('.space-y-2 img');
           qrCodeModal.classList.add('hidden');
       }
   });</script>
-
-
-
-
 
     <main>
       <!-- Konten utama akan ditambahkan di sini -->
