--- a/about.html
+++ b/about.html
@@ -247,7 +247,7 @@
         >
           <img
             src="imageabout/fotoku.jpg"
-            alt="Foto Qia"
+            alt="Foto Syifa"
             class="circle-img mb-3 object-cover rounded-full border-4 mx-auto"
             style="border-color: #205781"
           />
@@ -269,7 +269,7 @@
         >
           <img
             src="imageabout/fotoposko.jpg"
-            alt="Foto kami"
+            alt="Foto posko"
             class="circle-img mb-3 object-cover rounded-full border-4 mx-auto"
             style="border-color: #205781"
           />
