--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 
 <body class="bg-gray-200">
     <div class="relative">
-    <img alt="Background image of a park with a clock tower and trees" class="w-full h-[550px] object-cover" height="550" src="images/potensi.jpg" width="1920" />
+    <img alt="Background image of a beach" class="w-full h-[550px] object-cover" height="550" src="images/potensi.jpg" width="1920" />
     
     <div class="absolute inset-0 bg-gradient-to-r from-[#34699A] to-transparent"></div>
 
