--- a/infografis.html
+++ b/infografis.html
@@ -172,7 +172,7 @@
         <div class="grid grid-cols-1 sm:grid-cols-2 gap-4 mb-4">
           <div class="bg-white p-4 rounded-lg shadow flex items-center">
             <img
-              alt="Illustration of a group of people"
+              alt="Jumlah penduduk"
               class="w-12 h-12 mr-4"
               height="50"
               src="imageinfografis/jumlahpenduduk.png"
@@ -185,7 +185,7 @@
           </div>
           <div class="bg-white p-4 rounded-lg shadow flex items-center">
             <img
-              alt="Illustration of a family"
+              alt="jumlah kk"
               class="w-12 h-12 mr-4"
               height="50"
               src="imageinfografis/jumlahkk.png"
@@ -201,7 +201,7 @@
         <div class="grid grid-cols-1 sm:grid-cols-2 gap-4">
           <div class="bg-white p-4 rounded-lg shadow flex items-center">
             <img
-              alt="Illustration of a group of people"
+              alt="jumlah dusun"
               class="w-12 h-12 mr-4"
               height="50"
               src="imageinfografis/jumlahdusun.png"
@@ -213,7 +213,6 @@
             </div>
           </div>
         </div>
-
 
         </div>
       </div>
@@ -230,7 +229,7 @@
     
     <div class="grid grid-cols-1 sm:grid-cols-2 gap-4">
       <div class="bg-white p-4 rounded-lg shadow flex items-center">
-       <img alt="Illustration of a group of people" class="w-12 h-12 mr-4" src="imageinfografis/kantorlurah.png"/>
+       <img alt="kantor lurah" class="w-12 h-12 mr-4" src="imageinfografis/kantorlurah.png"/>
        <div>
         <p class="text-gray-600">
          Kantor Kelurahan
@@ -241,7 +240,7 @@
        </div>
       </div>
       <div class="bg-white p-4 rounded-lg shadow flex items-center">
-       <img alt="Illustration of a family" class="w-12 h-12 mr-4" src="imageinfografis/kantorcamat.png"/>
+       <img alt="kantor camat" class="w-12 h-12 mr-4" src="imageinfografis/kantorcamat.png"/>
        <div>
         <p class="text-gray-600">
          Kantor Kecamatan
@@ -259,7 +258,7 @@
 
      <div class="grid grid-cols-1 sm:grid-cols-2 gap-4">
       <div class="bg-white p-4 rounded-lg shadow flex items-center">
-       <img alt="Illustration of a group of people" class="w-12 h-12 mr-4" src="imageinfografis/puskesmas.png"/>
+       <img alt="puskesmas" class="w-12 h-12 mr-4" src="imageinfografis/puskesmas.png"/>
        <div>
         <p class="text-gray-600">
          PUSKESMAS 
@@ -270,7 +269,7 @@
        </div>
       </div>
       <div class="bg-white p-4 rounded-lg shadow flex items-center">
-       <img alt="Illustration of a family" class="w-12 h-12 mr-4" src="imageinfografis/klinik.png"/>
+       <img alt="klinik" class="w-12 h-12 mr-4" src="imageinfografis/klinik.png"/>
        <div>
         <p class="text-gray-600">
          KLINIK
@@ -281,7 +280,7 @@
        </div>
       </div>
       <div class="bg-white p-4 rounded-lg shadow flex items-center">
-       <img alt="Illustration of a family" class="w-12 h-12 mr-4" src="imageinfografis/posyandu.png"/>
+       <img alt="posyandu" class="w-12 h-12 mr-4" src="imageinfografis/posyandu.png"/>
        <div>
         <p class="text-gray-600">
          POSYANDU
@@ -299,7 +298,7 @@
 
      <div class="grid grid-cols-1 sm:grid-cols-3 gap-4">
       <div class="bg-white p-4 rounded-lg shadow flex items-center">
-       <img alt="Illustration of a family" class="w-12 h-12 mr-4" src="imageinfografis/tk.png"/>
+       <img alt="tk" class="w-12 h-12 mr-4" src="imageinfografis/tk.png"/>
        <div>
         <p class="text-gray-600">
          TK/RA
@@ -310,7 +309,7 @@
        </div>
       </div>
       <div class="bg-white p-4 rounded-lg shadow flex items-center">
-       <img alt="Illustration of a house" class="w-12 h-12 mr-4" src="imageinfografis/sd.png"/>
+       <img alt="sd" class="w-12 h-12 mr-4" src="imageinfografis/sd.png"/>
        <div>
         <p class="text-gray-600">
          SD
@@ -321,7 +320,7 @@
        </div>
       </div>
       <div class="bg-white p-4 rounded-lg shadow flex items-center">
-       <img alt="Illustration of a city" class="w-12 h-12 mr-4" src="imageinfografis/smp.png"/>
+       <img alt="smp" class="w-12 h-12 mr-4" src="imageinfografis/smp.png"/>
        <div>
         <p class="text-gray-600">
          SMP
@@ -339,7 +338,7 @@
 
       <div class="grid grid-cols-1 sm:grid-cols-2 gap-4">
       <div class="bg-white p-4 rounded-lg shadow flex items-center">
-       <img alt="Illustration of a group of people" class="w-12 h-12 mr-4" src="imageinfografis/masjid.png"/>
+       <img alt="masjid" class="w-12 h-12 mr-4" src="imageinfografis/masjid.png"/>
        <div>
         <p class="text-gray-600">
          MASJID
@@ -350,7 +349,7 @@
        </div>
       </div>
       <div class="bg-white p-4 rounded-lg shadow flex items-center">
-       <img alt="Illustration of a family" class="w-12 h-12 mr-4" src="imageinfografis/mushollah.png"/>
+       <img alt="mushollah" class="w-12 h-12 mr-4" src="imageinfografis/mushollah.png"/>
        <div>
         <p class="text-gray-600">
          MUSHOLLAH
@@ -368,7 +367,7 @@
      
      <div class="grid grid-cols-1 gap-4">
       <div class="bg-white p-4 rounded-lg shadow flex items-center">
-       <img alt="Illustration of a group of people" class="w-12 h-12 mr-4" src="imageinfografis/kua.png"/>
+       <img alt="kua" class="w-12 h-12 mr-4" src="imageinfografis/kua.png"/>
        <div>
         <p class="text-gray-600">
          KANTOR URUSAN AGAMA (KUA)
@@ -386,7 +385,7 @@
 
      <div class="grid grid-cols-1 sm:grid-cols-2 gap-4 mb-4">
       <div class="bg-white p-4 rounded-lg shadow flex items-center">
-       <img alt="Illustration of a group of people" class="w-12 h-12 mr-4" src="imageinfografis/sepakbola.png"/>
+       <img alt="lapangan sepakbola" class="w-12 h-12 mr-4" src="imageinfografis/sepakbola.png"/>
        <div>
         <p class="text-gray-600">
          LAPANGAN SEPAK BOLA        
@@ -399,7 +398,7 @@
 
      <div class="grid grid-cols-1 gap-4">
       <div class="bg-white p-4 rounded-lg shadow flex items-center">
-       <img alt="Illustration of a group of people" class="w-12 h-12 mr-4" src="imageinfografis/pasar.png"/>
+       <img alt="pasar" class="w-12 h-12 mr-4" src="imageinfografis/pasar.png"/>
        <div>
         <p class="text-gray-600">
          PASAR 
