--- a/profildesa.html
+++ b/profildesa.html
@@ -138,7 +138,7 @@
     <div class="flex flex-col items-center">
       <div class="flex-shrink-0 mb-4">
         <div class="relative">
-          <img alt="Foto Kepala Desa" class="rounded-full border-4 border-[#205781] mx-auto" height="200" src="imagesstruktur/kepalalurah.jpg" width="200" />
+          <img alt="Foto Kepala Lurah" class="rounded-full border-4 border-[#205781] mx-auto" height="200" src="imagesstruktur/kepalalurah.jpg" width="200" />
         </div>
         <div class="mt-4 text-center">
           <h2 class="text-xl font-bold text-gray-800">
@@ -194,7 +194,7 @@
       <div class="bg-white shadow-md rounded-lg overflow-hidden mt-4">
         <div class="p-5">
           <img
-            alt="Struktur Organisasi Pemerintahan Kelurahan Matekko"
+            alt="peta administrasi"
             class="w-full h-auto object-cover"
             height="400"
             src="imagesstruktur/petaadm.jpg"
